--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -1,12 +1,19 @@
 ---
 title: Le Wagon - Middleman
 ---
+<div id="about">
+  <div class="about-content">
+    <h1>This template was built with <i class="fa fa-heart"></i> by</h1>
+    <ul class="list-inline text-center">
+      <% ["rosenbelle", "JiantingZhang"].each do |gh_username| %>
+        <li>
+          <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{gh_username}", class: "img-circle" %>
+          <h3><%= gh_username.capitalize %></h3>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
 
-<ul class="list-inline text-center">
-  <% ["RosenbelleGanan", "JiantingZhang"].each do |gh_username| %>
-    <li>
-      <%= image_tag "ttps://kitt.lewagon.com/placeholder/users/#{gh_username}", class: "img-circle" %>
-      <h3><%= gh_username.capitalize %></h3>
-    </li>
-  <% end %>
-</ul>
+
+
