--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,17 +11,10 @@ title: Le Wagon - Middleman
   </div>
 </div>
 
+
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-4">
-
-
-      <div class="card" style="background-image: url(<%= image_path 'berlin.jpg'%>)">
-  <!-- card content -->
-      </div>
-
-
-
+    <div class="col-xs-12 col-sm-6 col-md-4">
       <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
         <div class="card-category">Popular</div>
         <div class="card-description">
@@ -29,6 +22,28 @@ title: Le Wagon - Middleman
           <p>Very cool city, the best</p>
         </div>
         <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
+        <a class="card-link" href="#" ></a>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/copenhagen');">
+        <div class="card-category">Popular</div>
+        <div class="card-description">
+          <h2>Le Wagon Copenhagen</h2>
+          <p>Very cool city, the best</p>
+        </div>
+        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/JiantingZhang">
+        <a class="card-link" href="#" ></a>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/london');">
+        <div class="card-category">Popular</div>
+        <div class="card-description">
+          <h2>Le Wagon London</h2>
+          <p>Very cool city, the best</p>
+        </div>
+        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/rosenbelle">
         <a class="card-link" href="#" ></a>
       </div>
     </div>
